--- a/index.html
+++ b/index.html
@@ -3,15 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="css/main.css">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <!-- 添加字体 -->
-    <script type="text/javascript" src="http://cdn.webfont.youziku.com/wwwroot/js/wf/youziku.api.min.js"></script>
-  <script type="text/javascript">
-     $youziku.load("body", "c62d7face0864ece9a53137645be7d57", "DroidSans");
-     /*$youziku.load("#id1,.class1,h1", "c62d7face0864ece9a53137645be7d57", "DroidSans");*/
-     /*．．．*/
-     $youziku.draw();
-  </script>
   <title>Document</title>
 </head>
 <body>
