add picture of top

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <title>OneDayOneSentence for Miss snow</title>
 </head>
 <body>
+  <img src="img/top.jpg" alt="">
   <p id="hitokoto">:D 获取中...</p>
   <div class="quoteS"><span>——</span><font id="from">:D 获取中...</font></div>
   <h2 class="css153542797f1e558">每日段子</h2>
