--- a/index.html
+++ b/index.html
@@ -4,19 +4,26 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link href='http://cdn.webfont.youziku.com/webfonts/nomal/124248/45824/5bcac6f6f629d816fc47c743.css' rel='stylesheet' type='text/css' />
-  <link rel="stylesheet" href="https://cdn.bootcss.com/twitter-bootstrap/4.1.3/css/bootstrap-grid.css">
+  <link rel="stylesheet" href="https://cdn.bootcss.com/twitter-bootstrap/4.1.3/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="css/main.css">
   <title>OneDayOneSentence for Miss snow</title>
 </head>
 <body>
-  <img src="img/top.jpg" alt="">
-  <p id="hitokoto">:D 获取中...</p>
-  <div class="quoteS"><span>——</span><font id="from">:D 获取中...</font></div>
-  <h2 class="css153542797f1e558">每日段子</h2>
+  <img class="rounded" src="img/top.jpg" alt="">
+  <div class="container">
+    <div class="card">
+      <div class="card-body">
+        <h2 id="hitokoto">:D 获取中...</h2>
+        <div class="quoteS"><span>——</span><font id="from">:D 获取中...</font></div>
+      </div>
+    </div>
+
+  </div>
+  <h1 >每日段子</h1>
   <div id="joke"></div>
   <div id="city"></div>
   <div id="weather"></div>
+  <div id="temp"></div>
   <script>
     fetch('https://v1.hitokoto.cn')
       .then(function (res){
@@ -53,15 +60,53 @@
           console.error(err);
         })
         // 天气
-        fetch('http://www.weather.com.cn/data/cityinfo/101190408.html')
+        var weatherArr={
+    "10": "暴雨",
+    "11": "大暴雨",
+    "12": "特大暴雨",
+    "13": "阵雪",
+    "14": "小雪",
+    "15": "中雪",
+    "16": "大雪",
+    "17": "暴雪",
+    "18": "雾",
+    "19": "冻雨",
+    "20": "沙尘暴",
+    "21": "小到中雨",
+    "22": "中到大雨",
+    "23": "大到暴雨",
+    "24": "暴雨到大暴雨",
+    "25": "大暴雨到特大暴雨",
+    "26": "小到中雪",
+    "27": "中到大雪",
+    "28": "大到暴雪",
+    "29": "浮尘",
+    "30": "扬沙",
+    "31": "强沙尘暴",
+    "53": "霾",
+    "99": "",
+    "00": "晴",
+    "01": "多云",
+    "02": "阴",
+    "03": "阵雨",
+    "04": "雷阵雨",
+    "05": "雷阵雨伴有冰雹",
+    "06": "雨夹雪",
+    "07": "小雨",
+    "08": "中雨",
+    "09": "大雨"
+};
+        fetch(' http://mobile.weather.com.cn/data/forecast/101200101.html?_=1381891660081')
           .then(function (res){
             return res.json();
           })
           .then(function (data) {
             var city = document.getElementById('city');
             var weather = document.getElementById('weather');
-            city.innerText = data.weatherinfo.city;
-            weather.innerText = data.weatherinfo.weather;
+            var temp = document.getElementById('temp');
+            city.innerText = data.c.c5;
+            weather.innerText = weatherArr[data.f.f1[0].fa]+weatherArr[data.f.f1[0].fb];
+            temp.innerText = data.f.f1[0].fd+'℃~'+data.f.f1[0].fc+'℃';
           })
           .catch(function (err) {
             console.error(err);
