--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <title>OneDayOneSentence for Miss snow</title>
 </head>
 <body class="mdui-bottom-nav-fixed">
-  <img class="rounded" src="img/top.jpg" alt="">
+  <img class="rounded full-width" src="img/top.jpg" alt="">
   <div class="container">
     <div class="card">
       <div class="card-body">
