--- a/index.html
+++ b/index.html
@@ -62,13 +62,13 @@ function guide() {
 <div class="sect-header mdui-text-center">
   <div class="sect-title">
     <i class="mdui-icon material-icons">&#xe616;</i>
-    每日一句
+    爱真一句
   </div>
   <p class="sect-slogan mdui-center">One Sentence One Day</p>
 
 </div>
 <!-- 每日一句卡片 -->
-      <div class="card-body" data-step="3" data-intro="`老婆，爱你呀，这里是每天一句呢，希望你看到会有启发，或者会有好的心情!
+      <div class="card-body" data-step="3" data-intro="`真真，爱你呀，这里是每天一句呢，希望你看到会有启发，或者会有好的心情!
       虽然说是每天一句，其实是一刷新就会有呢,没事的时候就刷刷看呀(￢_￢)瞄`">
         <h2 id="hitokoto">:D 获取中...</h2>
         <div class="quoteS" style="font-size:24px;"><span>——</span><font id="from">:D 获取中...</font></div>
@@ -78,7 +78,7 @@ function guide() {
   <div class="sect-header mdui-text-center" data-step="4" data-intro="这里是每日段子呢，希望老婆看了呢笑一笑，会更开心嗯!不过，会不会嫌弃太长不看呢，愁呢_(:ι」∠)_好饿，但是不想动">
       <div class="sect-title">
           <i class="mdui-icon material-icons">&#xe815;</i>
-          每日段子
+          逗真一乐
       </div>
       <p class="sect-slogan mdui-center" > Today's Jokes</p>
   </div>
@@ -93,7 +93,7 @@ function guide() {
       <i class="mdui-icon material-icons">history</i>
       <label>Recents</label>
     </a>
-    <a href="javascript:;" class="mdui-ripple">
+    <a href="favorite.html" class="mdui-ripple">
       <i class="mdui-icon material-icons">favorite</i>
       <label>Favorites</label>
     </a>
