--- a/nearby.html
+++ b/nearby.html
@@ -47,20 +47,15 @@
       // 5秒后回到中心点
       // var map = new BMap.Map("container");
 
+      var map = new BMap.Map("container");
+      map.centerAndZoom(new BMap.Point(114.095, 30.4675), 11);
+      var local = new BMap.LocalSearch(map,
+                    { renderOptions:{map: map, autoViewport: true}});
+      local.searchNearby("观", "武汉商学院");
 
       // 步行代码
       	// 百度地图API功能
-  
-        map.centerAndZoom(new BMap.Point(116.404, 39.915), 14);
-        var driving = new BMap.DrivingRoute(map, {
-            renderOptions: {
-                map: map,
-                autoViewport: true
-            }
-        });
-        var start = new BMap.Point(116.310791, 40.003419);
-        var end = new BMap.Point(116.486419, 39.877282);
-        driving.search(start, end);
+
 
   </script>
 <!-- 底部导航栏 -->
